# ClaudeMonitor

./: .gitignore  README.md  index.html  launch.ps1  package-lock.json  package.json  pr-body.md  requirements.txt  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
data/: debug_page_20251110T021333Z.html  debug_page_20251110T021414Z.html  debug_page_20251110T022226Z.html  debug_page_20251110T022523Z.html  debug_page_20251110T022525Z.html  debug_page_20251110T023838Z.html  extraction_debug_20251110T001041Z.json  extraction_debug_20251110T002143Z.json  extraction_debug_20251110T002412Z.json  extraction_debug_20251110T002546Z.json  extraction_debug_20251110T002715Z.json  extraction_debug_20251110T003249Z.json  extraction_debug_20251110T004051Z.json  extraction_debug_20251110T013018Z.json  extraction_debug_20251110T014435Z.json  extraction_debug_20251110T015026Z.json  extraction_debug_20251110T021333Z.json  extraction_debug_20251110T021414Z.json  extraction_debug_20251110T022226Z.json  extraction_debug_20251110T022525Z.json  extraction_debug_20251110T023838Z.json  extraction_debug_label_20251110T023500Z.json  extraction_debug_label_20251110T023721Z.json  extraction_debug_label_20251110T023838Z.json  usage-data.json
docs/: BUILD.md  DOM-INSPECTION-GUIDE.md  EPIC-01-Python-Scraper-Foundation.md  EPIC-08-Export-Reporting.md  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  database.rs  lib.rs  main.rs  notifications.rs  polling.rs  resource.rs  retry.rs  scraper.rs  settings.rs  state.rs  tray.rs
src-tauri/tests/: test_resource_resolution.rs
(+210 files in other folders)
